<?xml version="1.0"?>
<package format="2">
  <name>target_pose_creator</name>
  <version>1.0.0</version>
  <description>Package to generate AprilTag based target poses to follow</description>

  <maintainer email="nightking@gmx.net">Dennis Hemker</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>apriltag_ros</depend>
  <depend>cv_camera</depend>
  <depend>tf</depend>
  <depend>image_proc</depend>
  <buildtool_depend>catkin</buildtool_depend> 
</package>
