<?xml version="1.0"?>
<package format="2">
  <name>target_pose_creator</name>
  <version>1.0.0</version>
  <description>Package to generate AprilTag based target poses to follow</description>

  <maintainer email="nightking@gmx.net">Dennis Hemker</maintainer>

  <license>TODO</license>

  <depend>rclcpp</depend>
  <depend>apriltag_ros</depend> 
  <depend>tf2</depend>
  <depend>image_proc</depend> 
  
</package>
